fixed dark mode, color

--- a/darkmode.css
+++ b/darkmode.css
@@ -27,6 +27,7 @@ img {
 }
 
 .container-box {
+  /* background-color: black; */
   max-width: 1240px;
   margin: auto;
   padding: 0 8px;
@@ -34,7 +35,7 @@ img {
 
 /* Navbar */
 .navbar {
-  background-color: white;
+  background-color: #1d1653;
   width: 100%;
   min-height: 80px;
   border-bottom: 1px solid#eeeeee;
@@ -46,6 +47,7 @@ img {
 .navbar .logo {
   padding: 20px 5px;
   max-width: 100%;
+  filter: brightness(120%);
 }
 
 .menu {
@@ -66,13 +68,17 @@ img {
 
 .nav-menu {
   display: flex;
-  background-color: #fff;
+  background-color: #1d1653;
   z-index: 8000;
 }
 
 .nav-menu li {
   padding-left: 1rem;
   font-size: 1.2rem;
+}
+
+.nav-menu a {
+  background-color: white;
 }
 
 .nav-burgur-btn {
@@ -91,7 +97,7 @@ img {
   display: flex;
   justify-content: space-between;
   padding: 1rem 0;
-  background: white;
+  background: #37306b;
 }
 .icon-bar img {
   max-width: 80%;
@@ -108,7 +114,7 @@ img {
 .vowels {
   width: 100%;
   padding: 2rem 0;
-  background: white;
+  background: #37306b;
 }
 
 .vowels .title {
@@ -120,6 +126,7 @@ img {
 .vowels h2 {
   border-bottom: 4px solid #ff385c;
   display: inline;
+  color: #e2e2e2;
 }
 
 .listings {
@@ -139,6 +146,7 @@ img {
 .listings #card_ignore {
   cursor: auto;
   border-radius: initial;
+  opacity: 0;
 }
 
 .listings img {
@@ -154,7 +162,7 @@ img {
 .consonants {
   width: 100%;
   padding: 2rem 0;
-  background: white;
+  background: #37306b;
 }
 
 .consonants .title {
@@ -166,6 +174,7 @@ img {
 .consonants h2 {
   border-bottom: 4px solid #ff385c;
   display: inline;
+  color: #e2e2e2;
 }
 /* Listing 44 grid End  */
 
@@ -173,10 +182,11 @@ img {
 .scroll-btn {
   display: flex;
   padding-bottom: 1rem;
-  background: white;
+  background: #37306b;
 }
 
 .scroll-btn a {
+  color: #e2e2e2;
   margin: auto;
   font-size: 3rem;
 }
@@ -188,7 +198,7 @@ img {
   justify-content: space-between;
   border-top: 1px solid #eeeeee;
   padding: 1rem 0;
-  background: white;
+  background: #1d1653;
 }
 
 .footer .left-menu,
@@ -198,21 +208,23 @@ img {
 
 .footer .left-menu li {
   padding-right: 1rem;
+  color: #e2e2e2;
 }
 
 .footer .right-menu li {
   padding-left: 1rem;
+  color: #e2e2e2;
 }
 /* Footer End */
 
 /* Animation */
 .parallax {
+  background: #37306b;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 60vh;
-  background: #cad9f0;
   z-index: -1;
 }
 
@@ -253,7 +265,7 @@ img {
   text-align: center;
   top: 10%;
   font-size: 5rem;
-  color: #112434;
+  color: #e2e2e2;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -261,7 +273,7 @@ img {
   position: relative;
   width: 100%;
   height: 7vh;
-  background: #3586ff;
+  background: #1d1653;
 }
 
 .wave {
@@ -326,7 +338,7 @@ img {
 
 /* Top bar */
 .top-bar {
-  background-color: white;
+  background-color: #37306b;
   width: 100%;
   height: 50px;
   display: grid;
@@ -336,7 +348,7 @@ img {
 }
 
 .top-bar .intro {
-  color: black;
+  color: #e2e2e2;
   grid-column: 2;
   justify-self: center;
 }
@@ -344,7 +356,6 @@ img {
 /* Top bar End */
 
 /* Dark mode */
-
 #toggle {
   display: flex;
   justify-content: center;
@@ -365,16 +376,19 @@ img {
 }
 
 #toggle.active {
-  color: rgb(0, 0, 0);
+  color: white;
+}
+
+body.active {
+  background: #292929;
 }
 
 /* Dark mode End */
 
 /* Dictionary */
-
 ::selection {
   color: #fff;
-  background: #3586ff;
+  background: #37306b;
 }
 
 .wrapper .search {
@@ -400,7 +414,7 @@ img {
 .search :where(i, span) {
   position: absolute;
   top: 50%;
-  color: #999;
+  color: #b8b8b8;
   transform: translateY(-50%);
 }
 .search i {
@@ -422,7 +436,7 @@ img {
 }
 .wrapper .info-text {
   font-size: 13px;
-  color: #9a9a9a;
+  color: #ffffff;
   margin: -3px 0 -10px;
 }
 .wrapper.active .info-text {
@@ -434,7 +448,8 @@ img {
 
 .wrapper {
   width: 100%;
-  background: #fff;
+  /* background: #37306B; */
+  background: linear-gradient(to bottom, #ffffff, #37306b 50%, #37306b);
   padding: 25px 28px 45px;
 }
 
@@ -442,6 +457,7 @@ img {
   font-size: 28px;
   font-weight: 500;
   text-align: center;
+  color: #000000;
 }
 .wrapper ul {
   height: 0;
@@ -469,15 +485,16 @@ ul li:last-child {
   padding-bottom: 0;
 }
 ul .word p {
+  color: white;
   font-size: 25px;
   font-weight: 500;
 }
 ul .word span {
   font-size: 20px;
-  color: #989898;
+  color: white;
 }
 ul .word i {
-  color: #999;
+  color: #ffffff;
   font-size: 20px;
   cursor: pointer;
 }
@@ -494,12 +511,13 @@ ul .content::-webkit-scrollbar {
   border-left: 3px solid #ff385c;
 }
 .content li p {
+  color: white;
   font-size: 17px;
   font-weight: 500;
 }
 .content li span {
   font-size: 15px;
-  color: #7e7e7e;
+  color: white;
 }
 .content .synonyms .list {
   display: flex;
