--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -25,14 +25,12 @@
   .nav-menu {
     position: fixed;
     left: -100%;
-    background-color: #fff;
     flex-direction: column;
     top: 150px;
     height: 100%;
     width: 100%;
     transition-duration: 0.3s;
     padding-top: 1rem;
-    z-index: 800;
   }
 
   .nav-menu.active {
